--- a/src/components/ArtGrid.astro
+++ b/src/components/ArtGrid.astro
@@ -27,7 +27,7 @@ const { arts }: Props = Astro.props
       return (
         <Link
           href={`/art/${art.id}`}
-          class='group relative aspect-square overflow-hidden rounded-xl bg-base-300 transition-all duration-150 hover:shadow-md'
+          class='group relative aspect-square overflow-hidden rounded-xl bg-base-300 shadow-md transition-all duration-150 hover:shadow-lg'
           underline={false}
           data-index={index}
         >
