--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -22,6 +22,7 @@ import { Icon } from 'astro-icon/components'
             <Link
               href='/unlicense'
               class='hover:underline'
+              title={`${site.name} unlicense`}
               underline={false}
               externalInNewTab={false}
             >
@@ -31,6 +32,7 @@ import { Icon } from 'astro-icon/components'
             <Link
               href='https://youtube.com/watch?v=XO9FKQAxWZc'
               class='hover:underline'
+              title="'Copyright is Brain Damage' by Nina Paley"
               externalInNewTab={true}
               underline={false}
             >
