--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -8,7 +8,7 @@ const navItems = getNavItems()
 
 <header
   role='banner'
-  class='fixed left-0 right-0 top-0 z-50 bg-base-100/80 py-4 backdrop-blur-sm'
+  class='fixed inset-x-0 top-0 z-50 w-screen bg-base-100/80 py-4 backdrop-blur-sm'
   transition:persist
 >
   <a
@@ -19,7 +19,7 @@ const navItems = getNavItems()
   </a>
 
   <Container as='section'>
-    <div class='flex flex-wrap justify-between gap-y-2'>
+    <div class='flex items-center justify-between'>
       <Link
         href='/'
         title={`${site.name} - Return to homepage`}
