--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -352,6 +352,8 @@ const bandcampAlbums = await getCollection('music')
                 </div>
               </div>
 
+              <div class='divider' />
+
               <div class='h-[200px] space-y-2 overflow-y-auto pr-2'>
                 {playlist.tracks.map((track: any) => (
                   <Link
