--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -50,11 +50,11 @@ const bandcampAlbums = await getCollection('music')
   <ProfilePageStructuredData slot='structured-data' />
 
   <Container as='section'>
-    <div class='mb-12'>
+    <div class='animate mb-12'>
       <Subheader
-        class='animate mb-12 space-y-12'
+        class='mb-12 space-y-12'
         title='My Music'
-        subtitle='albums i have released'
+        subtitle='my released albums & music projects'
         link={{
           text: 'Open in Bandcamp',
           href: 'https://fractalcounty.bandcamp.com',
