--- a/src/components/layout/Subheader.astro
+++ b/src/components/layout/Subheader.astro
@@ -122,7 +122,7 @@ const {
               <h1
                 class:list={[
                   'title font-semibold text-base-content',
-                  isPost ? 'text-xl' : 'text-base uppercase',
+                  isPost ? 'text-xl normal-case' : 'text-base uppercase',
                 ]}
               >
                 {title}
